Add SonarQube. Fix SonarQube issues. Add readme. Add category search for reports. Add title search for events.